--- a/_posts/2019-06-30-the-us-narrative-today.html
+++ b/_posts/2019-06-30-the-us-narrative-today.html
@@ -2552,107 +2552,107 @@ stories:
   domain: http://www.appeal-democrat.com/
   link: https://www.appeal-democrat.com/news/mud-dash-brings-messy-fun-to-playzeum/article_098f55c6-9af2-11e9-ad34-8b0d139e37ea.html
 images:
-- name: old-house-oldhouse-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-sand-paper.jpg
-- name: abe-lincoln-one-plentiful-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-07-91.jpg
-- name: fence-fence-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crunch-paper.jpg
-- name: downtheline-downtheline-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dry-skin.jpg
-- name: crow-crow-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-dali-two.jpg
-- name: udnie-IMG_1184.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_1184.jpg
-- name: dragon-desert-desert-dragon-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-propaganda-leaflets.jpg
-- name: oldhouse-oldhouse-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-sunday.jpg
-- name: amusement-park-amusement-park-2-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-electricity.jpg
-- name: aws-s3-stories-capital-battle-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-capital-battle-internet-numbers.jpg
-- name: aws-s3-treeinhills-yellowtree-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-1200.jpg
-- name: berlinwall2-berlinwall-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-green-zuma.jpg
-- name: death-valley-death-valley-national-park-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-internet-numbers.jpg
-- name: capital-battle-capitolbattle-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-atari-asteroids.jpg
-- name: wind-mills-windmills-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-internet-numbers.jpg
-- name: statue-of-liberty-front-view-statueofliberty-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-collage.jpg
-- name: oldbarn-oldbarn-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alberto-giacometti.jpg
-- name: old-gas-pumps-oldgaspumps-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-gan-vogh.jpg
-- name: sand-hand-sand-hand-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-internet-numbers.jpg
-- name: catacombs-catacombs-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-circuit-3.jpg
-- name: border-crossing-bordercrossing-smoking-cigarette.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-smoking-cigarette.png
-- name: oldcabin-store-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dry-skin.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-jap-wav-pr.jpg
-- name: old-granary-field-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-blue-brush.jpg
-- name: border-crossing-bordercrossing-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colorful-blocks.png
-- name: white-house-whitehouse-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-constitution.jpg
-- name: losangelescloudyday-los-angeles-downtown-freeway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-freeway.jpg
-- name: old-cabin-oldcabin-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-mucha-mult.jpg
-- name: flower-barbed-wire-flower-barbed-wire-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-ww2-dresden.jpg
-- name: razorwire-DSC-0080-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-ww2-dresden.jpg
-- name: christianity-christianity-under-construction-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-electricity.jpg
-- name: gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-smoking-cigarette.jpg
-- name: downtown-trucksilo-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-dark-soul.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-aqua.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-purple-pond.JPG
-- name: carry-load-carryload-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-plentiful.jpg
-- name: rockingchair-rockingchair-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-colored-circuits.jpg
-- name: blossombar-dark-rain-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-rain-file-00-00-00-00.jpg
-- name: blossombar-crafty-painting-file-00-00-50-28.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-28.jpg
-- name: machine-road-machine-road-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-granite.jpg
-- name: stories-new-52-175-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-52-175-800-500-0-max-0-1--1.jpg
-- name: abandonedbuildings_green_zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_green_zuma.jpg
-- name: oldcabin-oldcabin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-aqua.jpg
-- name: hollywood-building-hollywood-building-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-brush.jpg
-- name: walled-garden-walled-garden-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-oily-mcoilface.jpg
-- name: server-cloud-server-racks-clouds-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-kand-two.jpg
-- name: razorcliff-razorcliff-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-two.jpg
-- name: old-gas-pumps-oldgaspumps-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-sunday.jpg
-- name: old-cabin-oldcabin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin.jpg
-- name: gypsymosaic-gypsy-eyes-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-internet-numbers.jpg
-- name: birdhouse-birdhouse-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-monet-one.jpg
+- name: beach-rocks-beach-rocks-currents-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kand-two.jpg
+- name: oldhouse-oldhouse-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-horiz-circuit.jpg
+- name: store-on-corner-oldcabin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-hot-spicy.jpg
+- name: beach-rocks-beach-rocks-currents-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-dark-rain.jpg
+- name: dragon_close-up-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-udnie.jpg
+- name: fence-mexico-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-yellow-paper.jpg
+- name: windowmountain-window-mountain-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-neo-instinct.jpg
+- name: art-museum-art-museum-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-kandinsky-bv.jpg
+- name: old-house-oldhouse-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-brush.jpg
+- name: oldcabin-store-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-green-zuma.jpg
+- name: aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-68-76-800-500-0-max-0-1--5.jpg
+- name: blossombar-deep-connections-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-deep-connections-file-00-00-50-62.jpg
+- name: ellis-island-ellisisland-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
+- name: rain-princess-P6210065.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P6210065.jpg
+- name: downtheline-downtheline-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-alberto-giacometti.jpg
+- name: aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C32Eg8bUEAEa-gj-square.jpg
+- name: rockingchair-rockingchair-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-pond.jpg
+- name: server-cloud-server-racks-door-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-brush.jpg
+- name: lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
+- name: castle-wall-DSC-0067-kand-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-kand-two.JPG
+- name: stories-servers-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-servers-blue-circuit.jpg
+- name: mosaic-face-mosaic-face-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-dry-skin.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-aqua.jpg
+- name: dragon-desert-desert-dragon-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-constitution.jpg
+- name: hollywood-building-hollywood-building-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-feed-people.jpg
+- name: adam-smith-adam-smith-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-creativity.jpg
+- name: capital-battle-capitolbattle-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-sunday.jpg
+- name: beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-marcel-duchamp.jpg
+- name: machine-road-machine-road.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road.jpg
+- name: old-church-oldchurch-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-deep-connections.jpg
+- name: rockingchair-rockingchair-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-monet-one.jpg
+- name: oldcabin-store-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-alberto-giacometti.jpg
+- name: mistywoods-babyfoot-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-diego-rivera1.jpg
+- name: beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-purple-pond.jpg
+- name: store-on-corner-store-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-crabapple.jpg
+- name: catacombs-catacombs-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-wols.jpg
+- name: old-granary-field-granaryfield-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-mucha-mult.jpg
+- name: downtown-los-angeles-downtown-la-nazi-poster.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-nazi-poster.JPG
+- name: curtain-curtain-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-far-away.jpg
+- name: old-barn-old-barn-1500-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-pablo-blue.jpg
+- name: school-clouds-church-clouds-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dark-soul.jpg
+- name: trucksilo-trucksilo-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-dark-dali.jpg
+- name: capital-battle-capitolbattle-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-two.jpg
+- name: old-barn-old-barn-1500-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-neo-instinct.jpg
+- name: machine-road-machine-road-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crafty-painting.jpg
+- name: abandonedbuildings_ww2_color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_ww2_color.jpg
+- name: nyc-flag-nycflag-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-circuit.jpg
+- name: dc-statue-dcstatue-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-purple-pond.jpg
+- name: server-cloud1-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-feed-people.jpg
+- name: aws-s3-square-C106VpCVQAEkHqy-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C106VpCVQAEkHqy-square.jpg
+- name: oldhotel-oldhotel-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colored-circuits.jpg
 ---
 Researchers Reach Milestone In Use Of Nanoparticles To Kill Cancer With Heat.&nbsp;Elizabeth Banks Wanted Charlie's Angels Stars To Feel 'comfortable'.&nbsp;How To Keep Your Home Cool And Improve Indoor Air Quality.&nbsp;Navy Captain's Death In Custody Sparks Outrage In Venezuela.&nbsp;DMZ, Where Trump Met Kim, Is A Vestige Of Cold War.&nbsp;China Promises To Ease Foreign Access To Gas, Call Centers.&nbsp;Albania Holds Local Elections Amid Political Turmoil.&nbsp;Yucca Valley Chamber Installs Officers, Honors Business Leaders.&nbsp;
